--- a/composer.json
+++ b/composer.json
@@ -10,19 +10,15 @@
     "require": {
         "php": "^7.3|^8.0",
         "cmgmyr/messenger": "^2.22",
-        "fideloper/proxy": "^4.2",
-        "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.0",
+        "laravel/framework": "^12.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^3.0"
+        "laravel/ui": "^4.6"
     },
     "require-dev": {
-        "facade/ignition": "^2.3.6",
-        "fzaninotto/faker": "^1.9.1",
+        "fakerphp/faker": "^1.24",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3"
+        "phpunit/phpunit": "11"
     },
     "config": {
         "optimize-autoloader": true,
